# taw-compiler

./: .gitignore  README.md  stack.yaml  taw.cabal
src/: Ast.hs  AstGen.hs  ComparisonTest.hs  Compiler.hs  Frontend.hs  InterpMain.hs  Interpreter.hs  JIT.hs  JITMain.hs  LLVMGen.hs  Parser.hs  ParserTests.hs  PrettyAst.hs  PrettyAstMain.hs  Tests.hs
src/tawprogs/: 1.taw  for.taw
tawprogs/: for.taw  fptrs.taw  scope.taw  stdlib.c
tests/: ComparisonTest.hs  Tests.hs
