name:                taw
version:             0.1
synopsis:            Compiler of a c-like language
description:         Compiler of a c-like language
author:              Logan May, Chris Fischer
Category:            Compilers
build-type:          Simple
cabal-version:       >=1.10

executable tawcmp
  default-language:    Haskell2010
  main-is:             Compiler.hs
  hs-source-dirs:      src
  other-modules:
    Ast
    Frontend
    LLVMGen
    Parser
    PrettyAst
  build-depends:
      base                 >= 4.7 && <5
    , llvm-hs              >= 9.0.1
    , llvm-hs-pure         >= 9.0.0
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.6
    , containers           >= 0.4
    , bytestring           >= 0.10
    , filepath             >= 1.4.2.1
    , directory            >= 1.3.3.0
    , pretty               >= 1.1.3.6

executable tawinterp
  default-language:    Haskell2010
  main-is:             InterpMain.hs
  hs-source-dirs:
    src
    tests
  other-modules:
    Ast
    Interpreter
    Parser
    PrettyAst
  build-depends:
      base                 >= 4.7 && <5
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.6
    , containers           >= 0.4
    , bytestring           >= 0.10
    , filepath             >= 1.4.2.1
    , directory            >= 1.3.3.0
    , pretty               >= 1.1.3.6

executable qc_test
  default-language:    Haskell2010
  main-is:             Tests.hs
  hs-source-dirs:
    src
    tests
  other-modules:
    Ast
    AstGen
    Frontend
    Interpreter
    JIT
    LLVMGen
    PrettyAst
  build-depends:
      base                 >= 4.7 && <5
    , haskeline            >= 0.7.5.0
    , llvm-hs              >= 9.0.1
    , llvm-hs-pure         >= 9.0.0
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.6
    , containers           >= 0.4
    , bytestring           >= 0.10
    , QuickCheck           >= 2.13
    , QuickCheck-GenT      >= 0.2.2
    , text                 >= 1.2.3.1
    , quickcheck-string-random >= 0.1.3.0
    , pretty               >= 1.1.3.6

executable tawrepl
  default-language:    Haskell2010
  main-is:             JITMain.hs
  hs-source-dirs:      src
  other-modules:
    Ast
    Frontend
    JIT
    LLVMGen
    Parser
    PrettyAst
  build-depends:
      base                 >= 4.7 && <5
    , haskeline            >= 0.7.5.0
    , llvm-hs              >= 9.0.1
    , llvm-hs-pure         >= 9.0.0
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.6
    , containers           >= 0.4
    , bytestring           >= 0.10
    , filepath             >= 1.4.2.1
    , directory            >= 1.3.3.0
    , pretty               >= 1.1.3.6

executable tawformat
  default-language:    Haskell2010
  main-is:             PrettyAstMain.hs
  hs-source-dirs:      src
  other-modules:
    Ast
    Parser
    PrettyAst
  build-depends:
      base                 >= 4.7 && <5
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.6
    , containers           >= 0.4
    , bytestring           >= 0.10
    , filepath             >= 1.4.2.1
    , directory            >= 1.3.3.0
    , pretty               >= 1.1.3.6
